fixed scrolling on mobile devices

--- a/static/style/timer.css
+++ b/static/style/timer.css
@@ -117,6 +117,9 @@ a {
   }
 }
 @media (max-width: 370px) {
+  body {
+    overflow-y: scroll;
+  }
   .count {
     display: flex;
     align-items: center;
